@@ -1,3 +1,6 @@
+2016-08-08  Kirit Saelensminde  <kirit@felspar.com>
+ Swap a `std::list` for a `std::vector` in the query string interface.
+
 2016-08-07  Kirit Saelensminde  <kirit@felspar.com>
  Fix a bug in the server request so it properly returns a reference to the query string.
 
